# cs2640_project_2026Spring

./: .gitignore  .gitmodules  README.md
LauYeeYu/: ai-usage.md
cainamisir/src/adaptivecache_paper2/: .gitignore  README.md  REMAINING_WORK.md  midterm.md  pyproject.toml
cainamisir/src/adaptivecache_paper2/modal_app/: demo_lmcache_hole.py  patch_lmcache.py  serve.py  serve_unified.py  swebench_instances.json
cainamisir/src/adaptivecache_paper2/paper/: PAPER1_PLAN.md  PAPER2_PLAN.md  midterm.blg
cainamisir/src/adaptivecache_paper2/paper/paper2/: qwen36_findings.md
cainamisir/src/adaptivecache_paper2/raw/: claude_code_compaction.md
cainamisir/src/adaptivecache_paper2/results/: RESULTS_SUMMARY.md  experiment_adaptive_10000_1775708275.json  experiment_none_32000_1775703003.json  experiment_none_32768_1775696905.json  modal_experiment_1775524112.json  modal_experiment_1775538482.json
cainamisir/src/adaptivecache_paper2/results/exp_haiku_5/: manifest.json  results.csv
cainamisir/src/adaptivecache_paper2/scripts/: run_swebench.py
cainamisir/src/adaptivecache_paper2/src/adaptive_cache/: segmenter.py  types.py
cainamisir/src/adaptivecache_paper2/src/harness/: lmcache_client.py  react_agent.py
cainamisir/src/adaptivecache_paper2/studies/lifetime_cost/: A6000_HANDOFF.md  pricing.yaml
cainamisir/src/adaptivecache_paper2/tests/: test_types.py
cainamisir/src/adaptivecache_paper2/wiki/: claude-code-compaction.md  context-folding.md  h2o.md  importance-scoring.md  infini-transformer.md  log.md  prefix-caching.md  research-plan.md  streamingllm.md
(+511 files in other folders)
